# b2-zip-files

./: .dockerignore  .env.template  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
config/: gunicorn.py
